--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>EstateAgency Bootstrap Template - About</title>
+  <title>Amigos Developers Bootstrap Template - About</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -26,7 +26,7 @@
   <link href="assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: EstateAgency - v4.7.0
+  * Template Name: Amigos Developers - v4.7.0
   * Template URL: https://bootstrapmade.com/real-estate-agency-bootstrap-template/
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
@@ -137,7 +137,7 @@
         <span></span>
         <span></span>
       </button>
-      <a class="navbar-brand text-brand" href="index.html">Estate<span class="color-b">Agency</span></a>
+      <a class="navbar-brand text-brand" href="index.html">Amigos<span class="color-b">Developers</span></a>
 
       <div class="navbar-collapse collapse justify-content-center" id="navbarDefault">
         <ul class="navbar-nav">
@@ -216,7 +216,7 @@
               <img src="assets/img/slide-about-1.jpg" alt="" class="img-fluid">
             </div>
             <div class="sinse-box">
-              <h3 class="sinse-title">EstateAgency
+              <h3 class="sinse-title">Amigos Developers
                 <span></span>
                 <br> Sinse 2017
               </h3>
@@ -230,7 +230,7 @@
               </div>
               <div class="col-lg-2  d-none d-lg-block position-relative">
                 <div class="title-vertical d-flex justify-content-start">
-                  <span>EstateAgency Exclusive Property</span>
+                  <span>Amigos Developers Exclusive Property</span>
                 </div>
               </div>
               <div class="col-md-6 col-lg-5 section-md-t3">
@@ -464,7 +464,7 @@
         <div class="col-sm-12 col-md-4">
           <div class="widget-a">
             <div class="w-header-a">
-              <h3 class="w-title-a text-brand">EstateAgency</h3>
+              <h3 class="w-title-a text-brand">Amigos Developers</h3>
             </div>
             <div class="w-body-a">
               <p class="w-text-a color-text-a">
@@ -597,7 +597,7 @@
           <div class="copyright-footer">
             <p class="copyright color-text-a">
               &copy; Copyright
-              <span class="color-a">EstateAgency</span> All Rights Reserved.
+              <span class="color-a">Amigos Developers</span> All Rights Reserved.
             </p>
           </div>
           <div class="credits">
@@ -605,7 +605,7 @@
             All the links in the footer should remain intact.
             You can delete the links only if you purchased the pro version.
             Licensing information: https://bootstrapmade.com/license/
-            Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=EstateAgency
+            Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Amigos Developers
           -->
             Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
           </div>
