--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Amigos Developer</title>
+  <title>Amigos Developers</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -137,7 +137,7 @@
         <span></span>
         <span></span>
       </button>
-      <a class="navbar-brand text-brand" href="index.html">Amigos<span class="color-b">Developer</span></a>
+      <a class="navbar-brand text-brand" href="index.html">Amigos<span class="color-b">Developers</span></a>
 
       <div class="navbar-collapse collapse justify-content-center" id="navbarDefault">
         <ul class="navbar-nav">
