--- a/agents-grid.html
+++ b/agents-grid.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/amigos_logo_1.jpeg" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -137,8 +137,7 @@
         <span></span>
         <span></span>
       </button>
-      <a class="navbar-brand text-brand" href="index.html">Amigos<span class="color-b">Developers</span></a>
-
+<a class="navbar-brand text-brand" href="index.html"  style="height: 100px; width:100px;"><img src="assets/img/amigos_logo_1.jpeg" alt="" class="img-fluid"></a>
       <div class="navbar-collapse collapse justify-content-center" id="navbarDefault">
         <ul class="navbar-nav">
 
@@ -154,16 +153,16 @@
             <a class="nav-link " href="property-grid.html">Property</a>
           </li>
 
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link " href="blog-grid.html">Blog</a>
           </li>
-
+ -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
             <div class="dropdown-menu">
               <a class="dropdown-item " href="property-single.html">Property Single</a>
-              <a class="dropdown-item " href="blog-single.html">Blog Single</a>
-              <a class="dropdown-item active" href="agents-grid.html">Agents Grid</a>
+<!--               <a class="dropdown-item " href="blog-single.html">Blog Single</a>
+ -->              <a class="dropdown-item active" href="agents-grid.html">Agents Grid</a>
               <a class="dropdown-item " href="agent-single.html">Agent Single</a>
             </div>
           </li>
